...
                    )
                }

                Spacer(modifier = Modifier.height(28.dp))

                Text(
                    text = "Did I get it right?",
                    color = CloudWhite,
                    style = MaterialTheme.typography.bodyLarge.copy(fontSize = 22.sp),
                    textAlign = TextAlign.Center
                )

                Spacer(modifier = Modifier.height(20.dp))
...
